# Gemini-cpp

./: .gitignore  CMakeLists.txt  README.md
docs/html/: annotated.html  base_8h.html  base_8h_source.html  batch__api__types_8h.html  batch__api__types_8h.js  batch__api__types_8h_source.html  cache__registry_8h.html  cache__registry_8h_source.html  caching__api__types_8h_source.html  chat__session_8h.html  chat__session_8h.js  class_gemini_c_p_p_1_1_cache_registry.js  class_gemini_c_p_p_1_1_chat_session.html  class_gemini_c_p_p_1_1_client-members.html  class_gemini_c_p_p_1_1_client.html  class_gemini_c_p_p_1_1_files.html  class_gemini_c_p_p_1_1_function_registry.html  class_gemini_c_p_p_1_1_http_mapped_status_code_helper.html  class_gemini_c_p_p_1_1_i_chat_storage.html  class_gemini_c_p_p_1_1_i_chat_storage.js  class_gemini_c_p_p_1_1_local_storage.html  class_gemini_c_p_p_1_1_log.html  class_gemini_c_p_p_1_1_models-members.html  class_gemini_c_p_p_1_1_models.html  class_gemini_c_p_p_1_1_remote_storage-members.html  class_gemini_c_p_p_1_1_resource_name-members.html  class_gemini_c_p_p_1_1_resource_name.html  class_gemini_c_p_p_1_1_support_1_1_aspect_ratio-members.html  class_gemini_c_p_p_1_1_support_1_1_aspect_ratio.html  class_gemini_c_p_p_1_1_support_1_1_aspect_ratio.js  class_gemini_c_p_p_1_1_support_1_1_base64_string-members.html  class_gemini_c_p_p_1_1_support_1_1_base64_string.html  class_gemini_c_p_p_1_1_support_1_1_base64_string.js  class_gemini_c_p_p_1_1_support_1_1_field_mask-members.html  class_gemini_c_p_p_1_1_support_1_1_field_mask.html  class_gemini_c_p_p_1_1_support_1_1_image_size-members.html  class_gemini_c_p_p_1_1_support_1_1_language_code-members.html  class_gemini_c_p_p_1_1_support_1_1_timestamp-members.html  class_gemini_c_p_p_1_1_tokens.html  class_gemini_c_p_p_1_1_tokens.js  (+282 more)
docs/latex/: annotated.tex  base_8h_source.tex  batch__api__types_8h_source.tex  cache__registry_8h.tex  cache__registry_8h_source.tex  caching__api__types_8h.tex  caching__api__types_8h_source.tex  chat__session_8h.tex  class_gemini_c_p_p_1_1_chat_session.tex  class_gemini_c_p_p_1_1_client.tex  class_gemini_c_p_p_1_1_function_registry.tex  class_gemini_c_p_p_1_1_i_chat_storage.eps  (+160 more)
examples/: demo.cpp
src/: cache_registry.cpp  chat_session.cpp  client.cpp  duration.cpp  generation_method.cpp  logger.cpp  model.cpp  request_builder.cpp  response.cpp  storage.cpp  support.cpp  types.cpp  url.cpp  utils.cpp  uuid.cpp
(+641 files in other folders)
